<package>
  <name>issgpr</name>
  <version>0.0.1</version>
  <description>C++ Incremental Sparse Spectrum Gaussian Process Regression Implementation</description>
  <author email="aes368@cornell.edu">Alex Spitzer</author>
  <maintainer email="aes368@cornell.edu">Alex Spitzer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
